--- a/EventManagement_Application/Pages/Organizer/Events/Attendees.cshtml
+++ b/EventManagement_Application/Pages/Organizer/Events/Attendees.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container mt-5">
-    <h2 class="mb-4">@Model.Event.Title - Attendees</h2>
+    <h2 class="mb-4 clr-text text-center my-3">@Model.Event.Title - Attendees</h2>
 
     <!-- Attendees Table -->
     <div class="table-responsive shadow-lg rounded-3">
