--- a/EventManagement_Application/Pages/Privacy.cshtml
+++ b/EventManagement_Application/Pages/Privacy.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Privacy Policy";
 }
 
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
     <div class="card shadow-sm border-0">
         <div class="card-header bg-custom text-white text-center">
             <h2 class="mb-0">@ViewData["Title"]</h2>
